# portfolio_optimization_toys

./: .gitignore  README.MD  analyze_markets.ipynb  bond_toys.ipynb  download_market.ipynb  download_price_history.ipynb  download_ticker_info.ipynb  download_tickers.ipynb  liquid_tickers.ipynb  plots.ipynb  pypopt_coock1.ipynb  pyproject.toml  requirements.txt  todo.md
info/: liquid_snp500.csv  liquid_tickers.csv  nasdaq-listed.csv  nyse-listed.csv  nyse-tickers.csv  shares_outstanding.csv  snp500-listed.csv  tickers_info.csv
pypoanal/: analyzer.py  assets.py  backtester.py  dataloader.py  portfolio_calculators.py  portfolio_rebalancer.py  rebalancer.py
tests/: test_MCAPWeightCalculator.py  test_analyzer.py  test_backtester.py  test_dataloader.py  test_loader.py  test_rebalancer.py
