[tool.poetry]
name = "pypoanal"
version = "0.1.0"
description = "Studying portfolio optimization and applying it in practice"
authors = ["Renat Yuldashev <renatyv@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
yahoo-fin = "^0.8.9"
yfinance = "^0.1.70"
pyportfolioopt = "^1.5.2"
jupyter = "^1.0.0"
tqdm = "^4.64.0"
pytest = "^7.1.2"
cvxpy = "^1.2.0"
hypothesis = "^6.45.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
